account-service: remove url
